K8S/tomcat_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service
  namespace: tomcat
spec:
  selector:
    app: tomcat
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8080
  type: NodePort
